[gd_scene load_steps=10 format=3 uid="uid://b80vy40h6lwwf"]

[ext_resource type="Script" path="res://Scenes+/MainWorld/MainWorld.gd" id="1_j534e"]
[ext_resource type="Script" path="res://Scenes+/GateMaker/gate_maker.gd" id="2_h8lh3"]
[ext_resource type="PackedScene" uid="uid://3fgk25xpmasg" path="res://Scenes+/Player/Rigs/Base/Player.tscn" id="2_kp6u4"]
[ext_resource type="Script" path="res://Scenes+/WindowManager/WindowManager.gd" id="4_waqpa"]
[ext_resource type="PackedScene" uid="uid://clektn0knb0ut" path="res://Scenes+/WindowManager/Window/Window.tscn" id="5_5nspg"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_u6yv0"]

[sub_resource type="Sky" id="Sky_w4pqf"]
sky_material = SubResource("ProceduralSkyMaterial_u6yv0")

[sub_resource type="Environment" id="Environment_lxha6"]
background_mode = 2
sky = SubResource("Sky_w4pqf")

[sub_resource type="PlaneMesh" id="PlaneMesh_b14a6"]
size = Vector2(10, 10)

[node name="MainWorld" type="Node3D"]
script = ExtResource("1_j534e")
player_scene = ExtResource("2_kp6u4")

[node name="GateMaker" type="Node" parent="."]
script = ExtResource("2_h8lh3")

[node name="WindowManager" type="Node" parent="."]
script = ExtResource("4_waqpa")
packed_window = ExtResource("5_5nspg")

[node name="PlayerHolder" type="Marker3D" parent="."]
transform = Transform3D(-1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 3, 1, 0)

[node name="Respawn" type="Marker3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 1, 0)

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_lxha6")

[node name="CSGMesh3D" type="CSGMesh3D" parent="."]
use_collision = true
mesh = SubResource("PlaneMesh_b14a6")

[node name="CSGTorus3D" type="CSGTorus3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.2, 0)
